--- a/TelegramBotClient/TelegramBotClient.csproj
+++ b/TelegramBotClient/TelegramBotClient.csproj
@@ -15,4 +15,10 @@
 
 
 
+  <ItemGroup>
+    <Content Include="..\.dockerignore">
+      <Link>.dockerignore</Link>
+    </Content>
+  </ItemGroup>
+
 </Project>
